--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/index.css" />
+    <link rel="stylesheet" href="./src/index.css" />
     <title>Birthday Buddy</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div id="root" class="h-full bg-pink-200"></div>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
